ignite-server/ignite-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ignite-cluster
  namespace: ignite-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ignite
  template:
    metadata:
      labels:
        app: ignite
    spec:
      serviceAccountName: ignite
      terminationGracePeriodSeconds: 60000
      containers:
        - name: ignite-node
          image: apacheignite/ignite:2.10.0
          resources:
            requests:
              memory: "700Mi"
              cpu: "500m"
            limits:
              memory: "700Mi"
              cpu: "500m"
          imagePullPolicy: Always
          # envFrom:
          #   - configMapRef:
          #       name: ignite-config
          ports:
            - containerPort: 47100 # communication SPI port
            - containerPort: 47500 # discovery SPI port
            - containerPort: 49112 # dafault JMX port
            - containerPort: 10800 # thin clients/JDBC driver port
            - containerPort: 8080 # REST API
          volumeMounts:
            - mountPath: /ignite/config
              name: config-vol
      volumes:
        - name: config-vol
          configMap:
            name: ignite-config
