ignite-server/ignite-client-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ignite-app
  namespace: ignite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ignite-client
  template:
    metadata:
      labels:
        app: ignite-client
    spec:
      serviceAccountName: ignite-cluster-account
      containers:
        - name: ignite-app-container
          image: "docker.io/shipa/ignite-persistence:latest"
          resources:
            requests:
              memory: "600Mi"
              cpu: "500m"
            limits:
              memory: "700Mi"
              cpu: "500m"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080 # REST API
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: ignite-app
  namespace: ignite
spec:
  type: NodePort
  selector:
    app: ignite-client
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 31007
