ignite-server/ignite-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # Cluster name.
  name: ignite-cluster
  namespace: ignite
spec:
  # The initial number of pods to be started by Kubernetes.
  replicas: 2
  selector:
    matchLabels:
      app: ignite
  template:
    metadata:
      labels:
        app: ignite
    spec:
      serviceAccountName: ignite-cluster-account
      terminationGracePeriodSeconds: 60000
      containers:
        # Custom pod name.
        - name: ignite-node
          image: "docker.io/shipa/ignite-server:latest"
#          env:
#            - name: OPTION_LIBS
#              value: ignite-kubernetes,ignite-rest-http
#            - name: CONFIG_URI
#              value: file:///ignite/config/ignite-node-configuration.xml
          resources:
            requests:
              memory: "700Mi"
              cpu: "500m"
            limits:
              memory: "700Mi"
              cpu: "500m"
          imagePullPolicy: Always
          ports:
            # Ports to open.
            - containerPort: 47100 # communication SPI port
            - containerPort: 47500 # discovery SPI port
            - containerPort: 49112 # dafault JMX port
            - containerPort: 10800 # thin clients/JDBC driver port
            - containerPort: 8080 # REST API
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - mountPath: /ignite/config
              name: config-vol
      volumes:
        - name: config-vol
          configMap:
            name: ignite-config
---
apiVersion: v1
kind: Service
metadata:
  # The name must be equal to TcpDiscoveryKubernetesIpFinder.serviceName
  name: ignite-cluster
  # The name must be equal to TcpDiscoveryKubernetesIpFinder.namespace
  namespace: ignite
  labels:
    app: ignite
spec:
  type: LoadBalancer
  ports:
    - name: rest
      port: 8080
      targetPort: 8080
    - name: thinclients
      port: 10800
      targetPort: 10800
    - name: communicationspi
      port: 47100
      targetPort: 47100
    - name: discoveryspi
      port: 47500
      targetPort: 47500
  # Optional - remove 'sessionAffinity' property if the cluster
  # and applications are deployed within Kubernetes
  #  sessionAffinity: ClientIP
  selector:
    # Must be equal to the label set for pods.
    app: ignite
status:
  loadBalancer: { }
