ignite-server/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ignite
  namespace: ignite-server
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: ignite.ignite-server.lb.k8s-dt-irmg-01.k8s.mephi.ru
      http:
        paths:
          - path: /
            backend:
              serviceName: ignite
              servicePort: 8080
